# CPPH

./: CMakeLists.txt  build.sh  install.sh
src/: command_execution.cpp  command_execution.hpp  commands.cpp  commands.hpp  exception.hpp  flags.cpp  flags.hpp  main.cpp  sources.hpp  utils.cpp  utils.hpp
tests/: Makefile  testing.hpp  tests.cpp
